# Printer-AI-Skills

./: .gitignore  README.md  README_CN.md  SKILL.md  main.py  pyproject.toml
local_printer/: cups.py  windows.py
models/: model.py
utils/: logger.py
