[project]
name = "printer-ai-skills"
version = "1.0.0"
description = "跨平台本地打印机 CLI - 让 AI 驱动本地打印"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'pycups>=2.0.4; sys_platform == "darwin" or sys_platform == "linux"',
    "pywin32>=311; sys_platform == 'win32'",
]

[project.scripts]
printer-ai = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["local_printer", "models", "utils"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true
